--- a/css/grid.css
+++ b/css/grid.css
@@ -1,16 +1,34 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
 .grid-container {
-width: 70%;
+width: 90%;
+max-width: 1000px;
 margin:0 auto;
+}
+
+.box {
+    position:absolute;
+    width:100%;
+    height:100%;
+    text-align:center;
+    background-color:blue;
+}
+
+.circle {
+    position: absolute;
+    background-color: #fff;
+    opacity: 0.5;
+    border-radius: 100%;
+    height: 1px;
+    width: 1px;
 }
 
 .square {
     float:left;
     position: relative;
-    width: 30%;
+    width: 32.7%;
     padding-bottom : 30%; /* = width for a 1:1 aspect ratio */
-    margin:1.66%;
+    margin:2px;
     background-color:#1E1E1E;
     overflow:hidden;
 }
@@ -20,8 +38,14 @@ margin:0 auto;
     height:90%; /* = 100% - 2*5% padding */
     width:90%; /* = 100% - 2*5% padding */
     padding: 5%;
-    
 }
+
+.content2 {
+    position:absolute;
+    height:100%; /* = 100% - 2*5% padding */
+    width:100%; /* = 100% - 2*5% padding */    
+}
+
 .table{
     display:table;
     width:100%;
