--- a/css/grid.css
+++ b/css/grid.css
@@ -2,7 +2,7 @@
 
 .grid-container {
 width: 90%;
-max-width: 1000px;
+max-width: 1440px;
 margin:0 auto;
 }
 
@@ -11,7 +11,6 @@ margin:0 auto;
     width:100%;
     height:100%;
     text-align:center;
-    background-color:blue;
 }
 
 .circle {
@@ -31,8 +30,19 @@ margin:0 auto;
     margin:2px;
     background-color:#1E1E1E;
     overflow:hidden;
+    -moz-transform:translate3d(0,0,0);-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-moz-transition:all .2s cubic-bezier(.4,0,.2,1);-webkit-transition:all .2s cubic-bezier(.4,0,.2,1);transition:all .2s cubic-bezier(.4,0,.2,1)
+    }
+.square:hover {
+-moz-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);-webkit-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);box-shadow:0 17px 50px 0 rgba(0,0,0,.19);position:relative;z-index:100
+    }
+.shadow {
+color:#fff;display:block;overflow:hidden;position:relative;
+-moz-transition:all .2s;-webkit-transition:all .2s;transition:all .2s;-moz-transform:translate3d(0,0,0);-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)
 }
-
+.shadow:hover {
+-moz-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);-webkit-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);box-shadow:0 12px 15px 0 rgba(0,0,0,.24)
+}
+    
 .content {
     position:absolute;
     height:90%; /* = 100% - 2*5% padding */
@@ -43,7 +53,44 @@ margin:0 auto;
 .content2 {
     position:absolute;
     height:100%; /* = 100% - 2*5% padding */
-    width:100%; /* = 100% - 2*5% padding */    
+    width:100%; /* = 100% - 2*5% padding */
+}
+
+.darken-b {
+    background: rgba(51, 181, 229, 0.70);
+    padding: 0;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s linear;
+    -ms-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.darken-r {
+    background: rgba(255, 68, 68, 0.70);
+    padding: 0;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s linear;
+    -ms-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.darken-y {
+    background: rgba(255, 187, 51, 0.70);
+    padding: 0;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s linear;
+    -ms-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.darken:hover {
+    opacity: 1;
 }
 
 .table{
@@ -86,13 +133,13 @@ li{
 }
 
 .img1{
-    background-image: url('../img/test.png');
+    background-image: url('../img/1.jpg');
 }
 .img2{
-    background-image: url('');
+    background-image: url('../img/2.jpg');
 }
 .img3{
-    background-image: url('');
+    background-image: url('../img/3.jpg');
 }
 
 /*  following just for the demo */
