--- a/css/grid.css
+++ b/css/grid.css
@@ -1,10 +1,128 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
-.grid-container {
-width: 90%;
-max-width: 1440px;
-margin:0 auto;
+html {
+    height:100%;
 }
+
+body {
+    font-size:20px;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    text-align:center;
+    background:#ECECEC;
+    height:100%;
+    width:100%;
+    padding:0;
+    margin:0;
+}
+
+p{
+    margin:0;
+    padding:0;
+    text-align:left;
+}
+
+#intro {
+    background: url('../img/1.jpg') 50% no-repeat;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden; 
+    position: relative;
+    width: 100%; 
+}
+
+#floating-intro {
+    width:100%;
+    height:30%;
+    left: 50%;
+    top: 50%;
+    margin-left: -50%;
+    margin-top: -180px;
+    text-align: center;
+    position: absolute;
+    font-size:50px;
+    font-color:#333;
+}
+
+#description{
+    background-color:blue;
+    text-align:center;
+    padding: 40px;
+    overflow: hidden;
+}
+
+#albums-intro{
+    text-align:center;
+    padding: 40px;
+    overflow: hidden;
+}
+
+#albums {
+    text-align:center;
+    width:100%;
+    position:relative;
+    overflow: hidden;
+    padding:0px 0px 20px 0px;
+}
+
+#videos-intro
+{
+    text-align:center;
+    padding:20px 0px 40px 0px;
+    overflow: hidden;
+    z-index:-1;
+}
+
+#videos
+{
+
+}
+
+#links {
+    background-color:blue;
+    text-align:center;
+    padding: 30px;
+    overflow: hidden;
+}
+
+.grid-container {
+    width: 90%;
+    max-width: 1440px;
+    margin:0 auto;
+}
+#paddingbox { 
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+
+    /* Since this element now uses border-box sizing, the 10px of horizontal
+       padding will be drawn inside the 80% width */
+    width: 33.3%;
+    padding: 2px 2px 2px 2px;
+    float:left;
+}
+.square {
+    position: relative;
+    width: 100%;
+    padding-bottom:90%; /* = width for a 1:1 aspect ratio */
+    margin:auto;
+    background-color:#1E1E1E;
+    overflow:hidden;
+    -moz-transform:translate3d(0,0,0);
+    -webkit-transform:translate3d(0,0,0);
+    transform:translate3d(0,0,0);
+    -moz-transition:all .2s cubic-bezier(.4,0,.2,1);
+    -webkit-transition:all .2s cubic-bezier(.4,0,.2,1);
+    transition:all .2s cubic-bezier(.4,0,.2,1)
+    }
+
+.square:hover {
+    -moz-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
+    -webkit-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
+    box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
+    position:relative;
+    z-index:100
+    }
 
 .box {
     position:absolute;
@@ -21,26 +139,22 @@ margin:0 auto;
     height: 1px;
     width: 1px;
 }
-
-.square {
-    float:left;
-    position: relative;
-    width: 32.7%;
-    padding-bottom : 30%; /* = width for a 1:1 aspect ratio */
-    margin:2px;
-    background-color:#1E1E1E;
-    overflow:hidden;
-    -moz-transform:translate3d(0,0,0);-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-moz-transition:all .2s cubic-bezier(.4,0,.2,1);-webkit-transition:all .2s cubic-bezier(.4,0,.2,1);transition:all .2s cubic-bezier(.4,0,.2,1)
-    }
-.square:hover {
--moz-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);-webkit-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);box-shadow:0 17px 50px 0 rgba(0,0,0,.19);position:relative;z-index:100
-    }
 .shadow {
-color:#fff;display:block;overflow:hidden;position:relative;
--moz-transition:all .2s;-webkit-transition:all .2s;transition:all .2s;-moz-transform:translate3d(0,0,0);-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)
+    color:#fff;
+    display:block;
+    overflow:hidden;
+    position:relative;
+    -moz-transition:all .2s;
+    -webkit-transition:all .2s;
+    transition:all .2s;
+    -moz-transform:translate3d(0,0,0);
+    -webkit-transform:translate3d(0,0,0);
+    transform:translate3d(0,0,0)
 }
 .shadow:hover {
--moz-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);-webkit-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);box-shadow:0 12px 15px 0 rgba(0,0,0,.24)
+    -moz-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);
+    -webkit-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);
+    box-shadow:0 12px 15px 0 rgba(0,0,0,.24)
 }
     
 .content {
@@ -143,20 +257,6 @@ li{
 }
 
 /*  following just for the demo */
-
-
-body {
-    font-size:20px;
-    font-family: 'Roboto', sans-serif;
-    color: #fff;
-    text-align:center;
-    background:#ECECEC;
-}
-p{
-    margin:0;
-    padding:0;
-    text-align:left;
-}
 
 .numbers{
     font-weight:900;
