--- a/css/grid.css
+++ b/css/grid.css
@@ -5,30 +5,22 @@ html {
 }
 
 body {
-    font-size:20px;
-    font-family: 'Roboto', sans-serif;
-    color: #fff;
-    text-align:center;
-    background:#ECECEC;
     height:100%;
     width:100%;
     padding:0;
     margin:0;
-}
-
-p{
-    margin:0;
-    padding:0;
-    text-align:left;
+    font-size:20px;
+    font-family: 'Roboto', sans-serif;
+    text-align:center;
+    /*background:#ECECEC;*/
 }
 
 #intro {
-    background: url('../img/1.jpg') 50% no-repeat;
-    background-size: cover;
     height: 100%;
-    overflow: hidden; 
-    position: relative;
     width: 100%; 
+    /*background: url('../img/1.jpg') 50% no-repeat;*/
+    background:#FCFCFC;
+    background-size: cover;
 }
 
 #floating-intro {
@@ -37,22 +29,50 @@ p{
     left: 50%;
     top: 50%;
     margin-left: -50%;
-    margin-top: -180px;
+    margin-top: -200px;
     text-align: center;
     position: absolute;
     font-size:50px;
-    font-color:#333;
+    color:#333;
+    /*background-color: blue;*/
 }
 
-#description{
-    background-color:blue;
+#floating-intro ul {
+    margin-top:-55px;
+    color:#333;
+    font-size:25px;
     text-align:center;
-    padding: 40px;
+}
+
+h2 {
+    margin-top: 0;
+}
+
+#description {
+    width:94%;
+    padding: 3%;
+    background-color:#fff;
+    color:#555;
+    text-align:center;
     overflow: hidden;
 }
 
-#albums-intro{
+h1 {
+  color: #345274;
+  font-size: 32px;
+  font-weight: 300;
+  letter-spacing: 0.08em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#description p {
+
+}
+
+#albums-intro {
     text-align:center;
+    color:#333;
     padding: 40px;
     overflow: hidden;
 }
@@ -68,6 +88,7 @@ p{
 #videos-intro
 {
     text-align:center;
+    color:#333;
     padding:20px 0px 40px 0px;
     overflow: hidden;
     z-index:-1;
@@ -75,7 +96,11 @@ p{
 
 #videos
 {
-
+    text-align:center;
+    width:100%;
+    position:relative;
+    overflow: hidden;
+    padding:0px 0px 20px 0px;
 }
 
 #links {
@@ -90,22 +115,21 @@ p{
     max-width: 1440px;
     margin:0 auto;
 }
-#paddingbox { 
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
 
-    /* Since this element now uses border-box sizing, the 10px of horizontal
-       padding will be drawn inside the 80% width */
+#square-padding { 
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     width: 33.3%;
     padding: 2px 2px 2px 2px;
     float:left;
 }
+
 .square {
-    position: relative;
     width: 100%;
-    padding-bottom:90%; /* = width for a 1:1 aspect ratio */
     margin:auto;
+    padding-bottom:100%;
+    position:relative;
     background-color:#1E1E1E;
     overflow:hidden;
     -moz-transform:translate3d(0,0,0);
@@ -114,7 +138,7 @@ p{
     -moz-transition:all .2s cubic-bezier(.4,0,.2,1);
     -webkit-transition:all .2s cubic-bezier(.4,0,.2,1);
     transition:all .2s cubic-bezier(.4,0,.2,1)
-    }
+}
 
 .square:hover {
     -moz-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
@@ -122,9 +146,15 @@ p{
     box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
     position:relative;
     z-index:100
-    }
+}
 
-.box {
+.darken-container {
+    position:absolute;
+    height:100%;
+    width:100%;
+}
+
+.waves-container {
     position:absolute;
     width:100%;
     height:100%;
@@ -139,6 +169,7 @@ p{
     height: 1px;
     width: 1px;
 }
+
 .shadow {
     color:#fff;
     display:block;
@@ -151,23 +182,11 @@ p{
     -webkit-transform:translate3d(0,0,0);
     transform:translate3d(0,0,0)
 }
+
 .shadow:hover {
     -moz-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);
     -webkit-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);
     box-shadow:0 12px 15px 0 rgba(0,0,0,.24)
-}
-    
-.content {
-    position:absolute;
-    height:90%; /* = 100% - 2*5% padding */
-    width:90%; /* = 100% - 2*5% padding */
-    padding: 5%;
-}
-
-.content2 {
-    position:absolute;
-    height:100%; /* = 100% - 2*5% padding */
-    width:100%; /* = 100% - 2*5% padding */
 }
 
 .darken-b {
@@ -212,10 +231,12 @@ p{
     width:100%;
     height:100%;
 }
+
 .table-cell{
     display:table-cell;
     vertical-align:middle;
 }
+
 /*  For list */
 ul{
     text-align:left;
@@ -228,16 +249,12 @@ li{
     padding:0;
 }
 
-
-/*  For responsive images */
-
 .content .rs{
     width:auto;
     height:auto;
     max-height:90%;
     max-width:100%;
 }
-/*  For responsive images as background */
 
 .bg{
     background-position:center center;
@@ -254,41 +271,4 @@ li{
 }
 .img3{
     background-image: url('../img/3.jpg');
-}
-
-/*  following just for the demo */
-
-.numbers{
-    font-weight:900;
-    font-size:100px;
-}
-
-#bottom {
-    clear:both;
-    margin:0 1.66%;
-    width:89.68%;
-    padding: 3.5%;
-    background-color:#1E1E1E;
-    color: #fff;
-}
-#bottom p{
-    text-align:center;
-    line-height:2em;
-}
-#bottom a{
-    color: #000;
-    text-decoration:none;
-    border:1px solid #000;
-    padding:10px 20px 12px;
-    line-height:70px;
-    background:#ccc;
-    
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
-
-#bottom a:hover{
-    background:#ECECEC;
-    border:1px solid #fff;
 }
