--- a/css/grid.css
+++ b/css/grid.css
@@ -2,6 +2,7 @@
 
 html {
     height:100%;
+    overflow: hidden;
 }
 
 body {
@@ -12,15 +13,40 @@ body {
     font-size:20px;
     font-family: 'Roboto', sans-serif;
     text-align:center;
-    /*background:#ECECEC;*/
+    perspective: 1px;
+    transform-style: preserve-3d;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.slide {
+  position: relative;
+  padding: 25vh 10%;
+  min-height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+	transform-style: inherit;
+}
+
+.slide:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right:0;
+}
+
+#slide1:before {
+  background-image: url('../img/parallax.jpg');
+  transform: translateZ(-1px) scale(2);
+  z-index:-1;
 }
 
 #intro {
     height: 100%;
     width: 100%; 
-    /*background: url('../img/1.jpg') 50% no-repeat;*/
-    background:#FCFCFC;
-    background-size: cover;
+    /*background:#FCFCFC;*/
 }
 
 #floating-intro {
@@ -32,15 +58,17 @@ body {
     margin-top: -200px;
     text-align: center;
     position: absolute;
-    font-size:50px;
+    font-size:70px;
     color:#333;
+    transform: translateZ(-1.5px) scale(2);
+    z-index:-1;
     /*background-color: blue;*/
 }
 
 #floating-intro ul {
     margin-top:-55px;
     color:#333;
-    font-size:25px;
+    font-size:50px;
     text-align:center;
 }
 
@@ -75,6 +103,7 @@ h1 {
     color:#333;
     padding: 40px;
     overflow: hidden;
+    background-color:#fff;
 }
 
 #albums {
@@ -83,6 +112,7 @@ h1 {
     position:relative;
     overflow: hidden;
     padding:0px 0px 20px 0px;
+    background-color:#fff;
 }
 
 #videos-intro
