--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ html {
 
 body {
     background-color: #FFF8EE;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Jua', sans-serif;
+    font-size: 22px;
 }
 
 .container {
@@ -17,7 +18,6 @@ body {
 .mainbody,
 .footer {
     padding: 20px;
-    border: 1px solid #000;
 }
 
 .header {
@@ -28,6 +28,8 @@ body {
 .mainbody {
     margin-top: 0px;
     min-height: 1400px;
+    font-family: 'Jua', sans-serif;
+    font-size: 20px;
 }
 
 .footer {
@@ -82,6 +84,10 @@ body {
     text-align: center;
 }
 
+.page-title img {
+    width: 35%;
+}
+
 .content {
     display: flex;
     flex-direction: row;
@@ -92,8 +98,8 @@ body {
 .column {
     position: relative;
     width: 50%;
-    border: 1px solid #000;
     padding: 10px;
+    border: 1px solid #000;
 }
 
 .overlay {
