--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ body {
 
 .page-title {
     text-align: center;
+    padding: 20px;
 }
 
 .page-title img {
@@ -92,7 +93,6 @@ body {
     display: flex;
     flex-direction: row;
     margin: auto;
-    padding: 20px;
 }
 
 .column {
@@ -101,13 +101,33 @@ body {
     padding: 10px;
     border: 1px solid #000;
 }
+.column img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+}
 
 .overlay {
     position: absolute;
     width: 100px;
     height: 100px;
     background-color: blue;
-    margin-top: -30px;
-    margin-left: 30px;
     z-index: 10;
+}
+
+.overlay img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+/* Add borders for debugging */
+.column,
+.overlay,
+.header,
+.mainbody,
+.footer {
+    border: 1px solid #000;
 }
