--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,33 @@ h1 {
 .header,
 .mainbody,
 .footer {
-    padding: 20px;
+    padding: 0px;
 }
 
 .header {
     display: flex;
     align-items: center;
+    padding: 20px;
+}
+
+.header-container {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    overflow: hidden;
+    height: 500px;
+    margin-bottom: -250px;
+    background: linear-gradient(to bottom, #FFF8EE, rgba(255, 255, 255, 0));
+}
+
+.header-image {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .mainbody {
@@ -99,20 +120,13 @@ h1 {
     height: audo;
 }
 
-.category-container {
-    width: 100%;
-    margin-top: 2%;
-    border-radius: 35px;
-}
-
 .category-container,
 .category-container-green {
     width: 100%;
     margin-top: 3%;
     border-radius: 35px;
     box-sizing: border-box;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding: 2.5%;
 }
 
 .category-container-green {
@@ -125,8 +139,8 @@ h1 {
     text-align: center;
     padding: 20px;
     margin-bottom: 2%;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 30%;
+    margin-right: 30%;
     border-radius: 35px;
     background: #000;
     font-size: 30px;
@@ -157,7 +171,6 @@ h1 {
     position: absolute;
     width: 100px;
     height: 100px;
-    background-color: blue;
     z-index: 10;
 }
 
@@ -176,6 +189,8 @@ h1 {
 .name img {
     width: 4%;
     height: 4%;
+    min-width: 10px;
+    min-height: 10px;
 }
 
 .description {
@@ -184,9 +199,11 @@ h1 {
 
 /* Add borders for debugging */
 
+
 .column,
 .overlay,
 .header,
+.navigation,
 .mainbody,
 .footer,
 .page-title,
