--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: #FFF8EE;
-    font-family: 'Jua', sans-serif;
     font-size: 22px;
     text-rendering: optimizeLegibility;
     image-rendering: smooth;
@@ -145,6 +144,7 @@ h1 {
     border-radius: 35px;
     box-sizing: border-box;
     padding: 2.5%;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .category-container-green {
@@ -170,6 +170,12 @@ h1 {
     display: flex;
     flex-direction: row;
     margin: auto;
+    font-family: 'Jua', sans-serif;
+}
+
+.content-fake {
+    margin: auto;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .column {
